First commit: HTML file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Apple</title>
 </head>
-<body>
+<body style="background-color: rgb(249, 248, 250);">
     <header>
         <h1>Dispositivos</h1>
         <nav>
@@ -15,6 +15,8 @@
                 <li>Contacto</li>
             </ul>
         </nav>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/IPhone_Logo_2016.svg" alt="Logo Apple"
+        style="width: 100px;height: 100px;">
     </header>
     <hr>
     <main>
@@ -22,6 +24,7 @@
             <article>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione eius odit labore in modi sunt velit, corrupti voluptatem, magnam a, repudiandae corporis reprehenderit nesciunt repellendus hic reiciendis cumque totam aspernatur?
             </article>
+
         </section>
     </main>
     <hr>
